Fix header vertical text alignment

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -139,7 +139,7 @@ pre[class*="language-"] {
 }
 
 main {
-    margin-top: 5px;
+    margin-top: 15px;
 }
 
 
@@ -299,4 +299,5 @@ h2.title {
 h1 {
     font-size: 30px;
     font-weight: 300;
+    margin-bottom: 0;
 }
